--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -1,37 +1,37 @@
-{% extends "layouts/azmind.html.twig" %}
+{% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
 {% block page_title %}Forgotten Password{% endblock %}
 
 {% block page_description %}Get a link to reset your UserFrosting password.{% endblock %}
-    
-{% block body_matter %}
-    <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 text">
-            <h1>Forgotten Password</h1>
-            <div class="description">
-                <p>
-                    Please enter the email address you used to sign up.<br>A link with instructions to reset your password will be emailed to you.
-                </p>
-            </div>
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-            <div id="alerts-page">
 
-            </div>
-            <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
-                {% include "components/csrf.html.twig" %}
-                <div class="form-group">
-                    <label class="sr-only" for="reset-form-email">Email</label>
-                    <input type="text" name="email" placeholder="Please enter the email address you used to sign up" class="form-control" id="reset-form-email">
-                </div>
-                <button type="submit" class="btn">Email Password Reset Link</button>
-            </form>
-        </div>
+{% block body_attributes %}
+    class="hold-transition login-page"
+{% endblock %}
+
+{% block content %}
+<div class="login-box">
+    <div class="login-logo">
+        <a href="{{site.uri.public}}">{{site.title}}</a>
     </div>
+    <!-- /.login-logo -->
+
+    <div class="login-box-body login-form">
+        <p class="login-box-msg"><strong>Forgotten Password</strong></p>
+        <p class="login-box-msg">Please enter the email address you used to sign up.<br>A link with instructions to reset your password will be emailed to you.</p>
+
+        <div class="alerts" id="alerts-page"></div>
+
+        <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
+            {% include "components/csrf.html.twig" %}
+            <div class="form-group">
+                <label class="sr-only" for="reset-form-email">Email</label>
+                <input type="text" name="email" placeholder="Please enter the email address you used to sign up" class="form-control" id="reset-form-email">
+            </div>
+            <button type="submit" class="btn btn-block btn-primary">Email Password Reset Link</button>
+        </form>
+    </div>
+    <!-- /.login-box-body -->
 {% endblock %}
 
 {% block scripts_page %}
@@ -39,8 +39,8 @@
     <script>
     {% include "components/page.js.twig" %}
     </script>
-    
+
     <!-- Include page-specific JS bundle -->
     {{ assets.js('js/pages/forgot-password') | raw }}
-    
+
 {% endblock %}
