--- a/app/sprinkles/account/templates/pages/resend-verification.html.twig
+++ b/app/sprinkles/account/templates/pages/resend-verification.html.twig
@@ -1,37 +1,37 @@
-{% extends "layouts/azmind.html.twig" %}
+{% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
 {% block page_title %}Resend Verification Email{% endblock %}
 
 {% block page_description %}Resend the verification email for your new UserFrosting account.{% endblock %}
-    
-{% block body_matter %}
-    <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 text">
-            <h1>{{translate("ACCOUNT.VERIFICATION.RESEND")}}</h1>
-            <div class="description">
-                <p>
-                    Please enter the email address you used to sign up, and your verification email will be resent.
-                </p>
-            </div>
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-            <div id="alerts-page">
 
-            </div>
-            <form id="request-verification-email" role="form" action="{{site.uri.public}}/account/resend-verification" method="post" class="r-form">
-                {% include "components/csrf.html.twig" %}
-                <div class="form-group">
-                    <label class="sr-only" for="verification-form-email">{{translate("EMAIL")}}</label>
-                    <input type="text" name="email" placeholder="The email address you used to register" class="form-control" id="verification-form-email">
-                </div>                   
-                <button type="submit" class="btn">Email the verification link for my account</button>
-            </form>
-        </div>
+{% block body_attributes %}
+    class="hold-transition login-page"
+{% endblock %}
+
+{% block content %}
+<div class="login-box">
+    <div class="login-logo">
+        <a href="{{site.uri.public}}">{{site.title}}</a>
     </div>
+    <!-- /.login-logo -->
+
+    <div class="login-box-body login-form">
+        <p class="login-box-msg"><strong>{{translate("ACCOUNT.VERIFICATION.RESEND")}}</strong></p>
+        <p class="login-box-msg">Please enter the email address you used to sign up, and your verification email will be resent.</p>
+
+        <div class="alerts" id="alerts-page"></div>
+
+        <form id="request-verification-email" role="form" action="{{site.uri.public}}/account/resend-verification" method="post" class="r-form">
+            {% include "components/csrf.html.twig" %}
+            <div class="form-group">
+                <label class="sr-only" for="verification-form-email">{{translate("EMAIL")}}</label>
+                <input type="text" name="email" placeholder="The email address you used to register" class="form-control" id="verification-form-email">
+            </div>
+            <button type="submit" class="btn btn-block btn-primary">Email the verification link for my account</button>
+        </form>
+    </div>
+    <!-- /.login-box-body -->
 {% endblock %}
 
 {% block scripts_page %}
@@ -39,8 +39,8 @@
     <script>
     {% include "components/page.js.twig" %}
     </script>
-    
+
     <!-- Include page-specific JS -->
     {{ assets.js('js/pages/resend-verification') | raw }}
-    
+
 {% endblock %}
