--- a/app/sprinkles/account/templates/pages/reset-password.html.twig
+++ b/app/sprinkles/account/templates/pages/reset-password.html.twig
@@ -1,47 +1,47 @@
-{% extends "layouts/azmind.html.twig" %}
+{% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
 {% block page_title %}Reset Password{% endblock %}
 
 {% block page_description %}Choose a new password for your account.{% endblock %}
-    
-{% block body_matter %}
-    <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 text">
-            <h1>Reset Password</h1>
-            <div class="description">
-                <p>
-                    Please choose a new password to continue.
-                </p>
-            </div>
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-            <div id="alerts-page">
 
-            </div>
-            <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/set-password" method="post" class="r-form">
-                {% include "components/csrf.html.twig" %}
-                {# Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 #}
-                <input type="text" style="display:none">
-                <input type="password" style="display:none">
-                
-                <div class="form-group">
-                    <label class="sr-only" for="form-password">New Password</label>
-                    <input type="password" name="password" placeholder="New password, 12-100 characters" class="form-control" id="form-password">
-                </div>                
-                
-                <div class="form-group">
-                    <label class="sr-only" for="form-passwordc">Re-enter new password</label>
-                    <input type="password" name="passwordc" placeholder="Re-enter your new password" class="form-control" id="form-passwordc">
-                </div>
-                <input type="hidden" name="token" value="{{token}}">
-                <button type="submit" class="btn">Set New Password and Sign In</button>
-            </form>
-        </div>
+{% block body_attributes %}
+    class="hold-transition login-page"
+{% endblock %}
+
+{% block content %}
+<div class="login-box">
+    <div class="login-logo">
+        <a href="{{site.uri.public}}">{{site.title}}</a>
     </div>
+    <!-- /.login-logo -->
+
+    <div class="login-box-body login-form">
+        <p class="login-box-msg"><strong>Reset Password</strong></p>
+        <p class="login-box-msg">Please choose a new password to continue.</p>
+
+        <div class="alerts" id="alerts-page"></div>
+
+        <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/set-password" method="post" class="r-form">
+            {% include "components/csrf.html.twig" %}
+            {# Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 #}
+            <input type="text" style="display:none">
+            <input type="password" style="display:none">
+
+            <div class="form-group">
+                <label class="sr-only" for="form-password">New Password</label>
+                <input type="password" name="password" placeholder="New password, 12-100 characters" class="form-control" id="form-password">
+            </div>
+
+            <div class="form-group">
+                <label class="sr-only" for="form-passwordc">Re-enter new password</label>
+                <input type="password" name="passwordc" placeholder="Re-enter your new password" class="form-control" id="form-passwordc">
+            </div>
+            <input type="hidden" name="token" value="{{token}}">
+            <button type="submit" class="btn btn-block btn-primary">Set New Password and Sign In</button>
+        </form>
+    </div>
+    <!-- /.login-box-body -->
 {% endblock %}
 
 {% block scripts_page %}
@@ -49,8 +49,8 @@
     <script>
     {% include "components/page.js.twig" %}
     </script>
-    
+
     <!-- Include page-specific JS bundle -->
     {{ assets.js('js/pages/set-or-reset-password') | raw }}
-    
+
 {% endblock %}
