--- a/app/sprinkles/root/templates/components/dashboard/navbar.html.twig
+++ b/app/sprinkles/root/templates/components/dashboard/navbar.html.twig
@@ -3,7 +3,7 @@
 {% block dashboard_navbar %}
     <div class="navbar-menu">
         <ul class="nav navbar-nav">
-          <li>{{ translate("HEADER_MESSAGE_ROOT") | upper }}</li>
+          <li><a href="#">{{ translate("HEADER_MESSAGE_ROOT") | upper }}</a></li>
         </ul>
     </div>
 
