--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -109,8 +109,7 @@
                 <p>
                     {{translate('TOS_AGREEMENT', {
                         'site_title' : site.title,
-                        'link_attributes' : 'class="js-show-tos" href="#" data-toggle="modal"',
-                        'link_text' : '&TOS'
+                        'link_attributes' : 'class="js-show-tos" href="#" data-toggle="modal"'
                     }) | raw}}
                 </p>
             </div>
