--- a/app/sprinkles/account/templates/pages/account-settings.html.twig
+++ b/app/sprinkles/account/templates/pages/account-settings.html.twig
@@ -31,12 +31,12 @@
                             <label for="input-email" class="col-sm-4 control-label">{{translate("EMAIL")}}</label>
                             <div class="col-sm-8">
                                 <input type="text" id="input-email" class="form-control" name="email" value="{{current_user.email}}" autocomplete="off" placeholder="{{translate("EMAIL")}}" {{page.visibility}}>
-                                <p class="help-block">Your email address.</p>
+                                <p class="help-block">{{translate("EMAIL.YOUR")}}.</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="input-first-name" class="col-sm-4 control-label">Name</label>
+                            <label for="input-first-name" class="col-sm-4 control-label">{{translate("NAME")}}</label>
                             <div class="col-sm-4">
                                 <input type="text" id="input-first-name" class="form-control" name="first_name" value="{{current_user.first_name}}" placeholder="{{translate("FIRST_NAME")}}" {{page.visibility}}>
                             </div>
@@ -53,29 +53,29 @@
                                     <option value="{{option}}" {% if (option == current_user.locale) %}selected{% endif %}>{{label}}</option>
                                     {% endfor %}
                                 </select>
-                                <p class="help-block">The language and locale to use for your account.</p>
+                                <p class="help-block">{{translate("LOCALE.ACCOUNT")}}.</p>
                             </div>
                         </div>
 
                         {% if page.visibility != "disabled" %}
                             <div class="form-group">
-                                <label for="input-password" class="col-sm-4 control-label">New Password</label>
+                                <label for="input-password" class="col-sm-4 control-label">{{translate("PASSWORD.NEW")}}</label>
                                 <div class="col-sm-8">
-                                    <input type="password" id="input-password" class="form-control" name="password" placeholder="12-100 characters">
-                                    <p class="help-block">Optional.</p>
+                                    <input type="password" id="input-password" class="form-control" name="password" placeholder="{{translate("PASSWORD.BETWEEN", {min: 12, max: 100})}}">
+                                    <p class="help-block">{{translate("OPTIONAL")}}.</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="input-passwordc" class="col-sm-4 control-label">Confirm New Password</label>
+                                <label for="input-passwordc" class="col-sm-4 control-label">{{translate("PASSWORD.CONFIRM_NEW")}}</label>
                                 <div class="col-sm-8">
-                                    <input type="password" id="input-passwordc" class="form-control" name="passwordc" placeholder="Re-enter your new password">
-                                    <p class="help-block">Required only if selecting a new password.</p>
+                                    <input type="password" id="input-passwordc" class="form-control" name="passwordc" placeholder="{{translate("PASSWORD.CONFIRM_NEW_EXPLAIN")}}">
+                                    <p class="help-block">{{translate("PASSWORD.CONFIRM_NEW_HELP")}}.</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="input-passwordcheck" class="col-sm-4 control-label">Current Password</label>
+                                <label for="input-passwordcheck" class="col-sm-4 control-label">{{translate("PASSWORD.CURRENT")}}</label>
                                 <div class="col-sm-8">
-                                    <input type="password" id="input-passwordcheck" class="form-control" name="passwordcheck" placeholder="You must confirm your current password to make changes.">
+                                    <input type="password" id="input-passwordcheck" class="form-control" name="passwordcheck" placeholder="{{translate("PASSWORD.CURRENT_EXPLAIN")}}">
                                 </div>
                             </div>
                         {% endif %}
