--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -1,9 +1,9 @@
 {% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
-{% block page_title %}Forgotten Password{% endblock %}
+{% block page_title %}{{translate("PASSWORD.FORGOTTEN")}}{% endblock %}
 
-{% block page_description %}Get a link to reset your UserFrosting password.{% endblock %}
+{% block page_description %}{{translate("PASSWORD.FORGET.PAGE")}}{% endblock %}
 
 {% block body_attributes %}
     class="hold-transition login-page"
@@ -17,18 +17,18 @@
     <!-- /.login-logo -->
 
     <div class="login-box-body login-form">
-        <p class="login-box-msg"><strong>Forgotten Password</strong></p>
-        <p class="login-box-msg">Please enter the email address you used to sign up.<br>A link with instructions to reset your password will be emailed to you.</p>
+        <p class="login-box-msg"><strong>{{translate("PASSWORD.FORGOTTEN")}}</strong></p>
+        <p class="login-box-msg">{{translate("PASSWORD.FORGET.EMAIL")}}</p>
 
         <div class="alerts" id="alerts-page"></div>
 
         <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
             {% include "components/csrf.html.twig" %}
             <div class="form-group">
-                <label class="sr-only" for="reset-form-email">Email</label>
-                <input type="text" name="email" placeholder="Please enter the email address you used to sign up" class="form-control" id="reset-form-email">
+                <label class="sr-only" for="reset-form-email">{{translate("EMAIL")}}</label>
+                <input type="text" name="email" placeholder="{{translate("EMAIL")}}" class="form-control" id="reset-form-email">
             </div>
-            <button type="submit" class="btn btn-block btn-primary">Email Password Reset Link</button>
+            <button type="submit" class="btn btn-block btn-primary">{{translate("PASSWORD.FORGET.EMAIL_SEND")}}</button>
         </form>
     </div>
     <!-- /.login-box-body -->
