--- a/app/sprinkles/account/templates/pages/resend-verification.html.twig
+++ b/app/sprinkles/account/templates/pages/resend-verification.html.twig
@@ -1,9 +1,9 @@
 {% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
-{% block page_title %}Resend Verification Email{% endblock %}
+{% block page_title %}{{translate("ACCOUNT.VERIFICATION.RESEND")}}{% endblock %}
 
-{% block page_description %}Resend the verification email for your new UserFrosting account.{% endblock %}
+{% block page_description %}{{translate("ACCOUNT.VERIFICATION.PAGE")}}{% endblock %}
 
 {% block body_attributes %}
     class="hold-transition login-page"
@@ -18,7 +18,7 @@
 
     <div class="login-box-body login-form">
         <p class="login-box-msg"><strong>{{translate("ACCOUNT.VERIFICATION.RESEND")}}</strong></p>
-        <p class="login-box-msg">Please enter the email address you used to sign up, and your verification email will be resent.</p>
+        <p class="login-box-msg">{{translate("ACCOUNT.VERIFICATION.EMAIL")}}</p>
 
         <div class="alerts" id="alerts-page"></div>
 
@@ -26,9 +26,9 @@
             {% include "components/csrf.html.twig" %}
             <div class="form-group">
                 <label class="sr-only" for="verification-form-email">{{translate("EMAIL")}}</label>
-                <input type="text" name="email" placeholder="The email address you used to register" class="form-control" id="verification-form-email">
+                <input type="text" name="email" placeholder="{{translate("EMAIL")}}" class="form-control" id="verification-form-email">
             </div>
-            <button type="submit" class="btn btn-block btn-primary">Email the verification link for my account</button>
+            <button type="submit" class="btn btn-block btn-primary">{{translate("ACCOUNT.VERIFICATION.SEND")}}</button>
         </form>
     </div>
     <!-- /.login-box-body -->
