--- a/app/sprinkles/account/templates/pages/reset-password.html.twig
+++ b/app/sprinkles/account/templates/pages/reset-password.html.twig
@@ -1,9 +1,9 @@
 {% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
-{% block page_title %}Reset Password{% endblock %}
+{% block page_title %}{{translate("PASSWORD.RESET")}}{% endblock %}
 
-{% block page_description %}Choose a new password for your account.{% endblock %}
+{% block page_description %}{{translate("PASSWORD.RESET.PAGE")}}{% endblock %}
 
 {% block body_attributes %}
     class="hold-transition login-page"
@@ -17,8 +17,8 @@
     <!-- /.login-logo -->
 
     <div class="login-box-body login-form">
-        <p class="login-box-msg"><strong>Reset Password</strong></p>
-        <p class="login-box-msg">Please choose a new password to continue.</p>
+        <p class="login-box-msg"><strong>{{translate("PASSWORD.RESET")}}</strong></p>
+        <p class="login-box-msg">{{translate("PASSWORD.RESET.CHOOSE")}}</p>
 
         <div class="alerts" id="alerts-page"></div>
 
@@ -29,16 +29,16 @@
             <input type="password" style="display:none">
 
             <div class="form-group">
-                <label class="sr-only" for="form-password">New Password</label>
-                <input type="password" name="password" placeholder="New password, 12-100 characters" class="form-control" id="form-password">
+                <label class="sr-only" for="form-password">{{translate("PASSWORD.NEW")}}</label>
+                <input type="password" name="password" placeholder="{{translate("PASSWORD.BETWEEN", {min: 12, max: 100})}}" class="form-control" id="form-password">
             </div>
 
             <div class="form-group">
-                <label class="sr-only" for="form-passwordc">Re-enter new password</label>
-                <input type="password" name="passwordc" placeholder="Re-enter your new password" class="form-control" id="form-passwordc">
+                <label class="sr-only" for="form-passwordc">{{translate("PASSWORD.CONFIRM_NEW")}}</label>
+                <input type="password" name="passwordc" placeholder="{{translate("PASSWORD.CONFIRM_NEW_EXPLAIN")}}" class="form-control" id="form-passwordc">
             </div>
             <input type="hidden" name="token" value="{{token}}">
-            <button type="submit" class="btn btn-block btn-primary">Set New Password and Sign In</button>
+            <button type="submit" class="btn btn-block btn-primary">{{translate("PASSWORD.RESET.SEND")}}</button>
         </form>
     </div>
     <!-- /.login-box-body -->
