until the new website is ready...

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,7 +6,7 @@
     <body id="page-top" class="index">
         {% include 030/nav.html %}
         <div class="tease">
-            UserFrosting 4 is coming! Learn more at <a href="https://learn.userfrosting.com">https://learn.userfrosting.com</a>
+            UserFrosting 4 is here! Head to <a href="https://learn.userfrosting.com">https://learn.userfrosting.com</a> for the new docs.  We'll have our the rest of our new website up soon.
         </div>
         {{ content }}
           
