Hide `HEADER_MESSAGE_ROOT` on mobile and small screens
See #641

--- a/app/sprinkles/root/templates/components/dashboard/navbar.html.twig
+++ b/app/sprinkles/root/templates/components/dashboard/navbar.html.twig
@@ -1,5 +1,5 @@
 {% extends "@admin/components/dashboard/navbar.html.twig" %}
 
 {% block dashboard_navbar_extra %}
-  <li><a href="#">{{ translate("HEADER_MESSAGE_ROOT") | upper }}</a></li>
+  <li class="hidden-xs hidden-sm"><a href="#">{{ translate("HEADER_MESSAGE_ROOT") | upper }}</a></li>
 {% endblock %}
