--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,7 +6,7 @@
     <body id="page-top" class="index">
         {% include 030/nav.html %}
         <div class="tease">
-            Heads up!  This site will be replaced with the new site for v4 at any moment now.  Yes, right now!  The site for v3 will be migrated to http://v3.userfrosting.com.  Please check back in 30 minutes to an hour.
+            Heads up!  These are the docs for UF3.  For UF4 (recommended), visit <a href="https://learn.userfrosting.com">https://learn.userfrosting.com</a>.
         </div>
         {{ content }}
           
