put tease for UF4 on all pages

--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -6,7 +6,10 @@
     <body id="page-top" class="index">
     
         {% include 030/nav.html %}
-    
+        <div class="tease">
+            Heads up!  These are the docs for UF3.  For UF4 (recommended), visit <a href="https://learn.userfrosting.com">https://learn.userfrosting.com</a>.
+        </div>
+
         {{ content }}
           
         <!-- Footer -->
