--- a/_includes/022/head.html
+++ b/_includes/022/head.html
@@ -26,7 +26,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       
-        ga('create', 'UA-37689257-2', 'www.userfrosting.com');
+        ga('create', 'UA-37689257-2', 'auto');
         ga('send', 'pageview');
       
     </script>
