--- a/_includes/030/head.html
+++ b/_includes/030/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
+    <meta name="description" content="{{page.description}}">
     <meta name="author" content="Alex Weissman">
 
     <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/img/cupcake.ico">
